--- a/sass/layouts/main/_index.scss
+++ b/sass/layouts/main/_index.scss
@@ -15,8 +15,10 @@ main {
 
 .hero {
     background-color: var(--color-bluelight-100);
-    height: 450px;
+    height: 550px;
     width: 100%;
+    background-size: cover;
+    background-position: center center;
 }
 
 .content {
@@ -37,4 +39,40 @@ main {
             background-color: var(--color-bluelight-100);
         }
     }
+}
+
+.loader {
+    width: 100%;
+    background-color: #fff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+
+    .rotate {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border-left-color: var(--color-bluelight-20);
+        animation: spin .5s linear infinite;
+        transition: animation .2s  ease-in-out;
+    }
+
+    @keyframes spin {
+       to {
+            transform: rotate(1turn);
+        }
+
+    }
+}
+.button {
+  appearance: none;
+  border: 1px solid var(--color-red-20);
+  padding: 10px;
+  background-color: transparent;
+  border-radius: 50px;
+  margin: 10px;
+  cursor: pointer;
 }
