--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -7,46 +7,54 @@ resultados
     flex: 1 1 auto;
     flex-direction: column;
     position: relative;
+    height: 100vh;
 }
 
-.results__column {
-    &--wrapper {
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        max-width: 980px;
-        scrollbar-width: none;
+.results {
+    &__item {
+        position: relative;
+    }
 
-        &::-webkit-scrollbar {
-            display: none;
+    &__column {
+        &--wrapper {
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            max-width: 980px;
+            scrollbar-width: none;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+        }
+
+        &--item {
+            padding: 2rem 1.168rem;
+            border-bottom: 1px solid var(--color-white-20);
+        }
+
+        &--img {
+            border-radius: 5px;
+            overflow: hidden;
         }
     }
 
-    &--item {
-        padding: 2rem 1.168rem;
+    &__item--text {
+        font-size: 14px;
+        color: #717171;
+        line-height: 1.1618rem;
+        letter-spacing: .01618rem;
+        font-weight: 300;
     }
 }
-
-/* height: 980px;
-      min-height: 0;
-      display: flex;
-      flex-direction: column;
-      overflow-y: auto;
-      overflow-x: hidden;
-      flex: 1 1 auto;
-      -webkit-overflow-scrolling: touch;
-      padding-bottom: 30px;
-      scrollbar-width: none;
-      -ms-overflow-style: none; */
-
-/*   width: 703px;
-  overflow-y: auto;
-  flex-shrink: 0;
-  -webkit-box-flex: 0;
-  flex-grow: 0;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  background-color: #fff;
-  position: relative; */
+.favourite {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
