--- a/sass/layouts/main/_index.scss
+++ b/sass/layouts/main/_index.scss
@@ -1,71 +1,70 @@
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
-    flex: 1 1 auto;
-    margin-top: 5rem;
+  flex: 1 1 auto;
+  margin-top: 5rem;
 }
 
 .hero {
-    background-color: var(--color-bluelight-100);
-    height: 550px;
-    width: 100%;
-    background-size: cover;
-    background-position: center center;
+  background-color: var(--color-bluelight-100);
+  height: 550px;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
 }
 
 .content {
-    &--overlap {
-        background-color: #fff;
-        border-radius: 8px 8px 0 0;
-        margin: -40px 56px 0;
-    }
+  &--overlap {
+    background-color: #fff;
+    border-radius: 8px 8px 0 0;
+    margin: -40px 56px 0;
+  }
 }
 
 .list__places {
-    &--item {
-        width: 100%;
-        max-width: 250px;
+  &--item {
+    width: 100%;
+    max-width: 250px;
 
-        &--picture {
-            height: 350px;
-            background-color: var(--color-bluelight-100);
-        }
+    &--picture {
+      height: 350px;
+      background-color: var(--color-bluelight-100);
     }
+  }
 }
 
 .loader {
-    width: 100%;
-    background-color: #fff;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2.5rem;
+  width: 100%;
+  background-color: #fff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
 
-    .rotate {
-        border: 4px solid rgba(0, 0, 0, 0.1);
-        width: 36px;
-        height: 36px;
-        border-radius: 50%;
-        border-left-color: var(--color-bluelight-20);
-        animation: spin .5s linear infinite;
-        transition: animation .2s  ease-in-out;
+  .rotate {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: var(--color-bluelight-20);
+    animation: spin 0.5s linear infinite;
+    transition: animation 0.2s ease-in-out;
+  }
+
+  @keyframes spin {
+    to {
+      transform: rotate(1turn);
     }
-
-    @keyframes spin {
-       to {
-            transform: rotate(1turn);
-        }
-
-    }
+  }
 }
 .button {
   appearance: none;
