--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -3,58 +3,58 @@ resultados
 */
 
 #mapa {
-    background-color: var(--color-bluelight-100);
-    flex: 1 1 auto;
-    flex-direction: column;
-    position: relative;
-    height: 100vh;
+  background-color: var(--color-bluelight-100);
+  flex: 1 1 auto;
+  flex-direction: column;
+  position: relative;
+  height: 100vh;
 }
 
 .results {
-    &__item {
-        position: relative;
+  &__item {
+    position: relative;
+  }
+
+  &__column {
+    &--wrapper {
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      max-width: 980px;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
-    &__column {
-        &--wrapper {
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            max-width: 980px;
-            scrollbar-width: none;
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-        }
-
-        &--item {
-            padding: 2rem 1.168rem;
-            border-bottom: 1px solid var(--color-white-20);
-        }
-
-        &--img {
-            border-radius: 5px;
-            overflow: hidden;
-        }
+    &--item {
+      padding: 2rem 1.168rem;
+      border-bottom: 1px solid var(--color-white-20);
     }
 
-    &__item--text {
-        font-size: 14px;
-        color: #717171;
-        line-height: 1.1618rem;
-        letter-spacing: .01618rem;
-        font-weight: 300;
+    &--img {
+      border-radius: 5px;
+      overflow: hidden;
     }
+  }
+
+  &__item--text {
+    font-size: 14px;
+    color: #717171;
+    line-height: 1.1618rem;
+    letter-spacing: 0.01618rem;
+    font-weight: 300;
+  }
 }
 .favourite {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
