dinamyc page created

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -160,7 +160,7 @@ $fontSizes: (
 $line-height-base: inherit;
 
 $fontfamily: (
-  global: "'Roboto', sans-serif",
+  global: " 'Montserrat', sans-serif;",
   text:
     "'Open Sans',system-ui,-apple-systemHelvetica Neue,Helvetica,Arial,sans-serif",
 );
