--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 
 @import "layouts/main/index";
 
-/* @import "components/index";*/
+@import "components/index";
 @import "components/columns";
 @import "layouts/header/index";
 @import "pages/index";
