--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -100,7 +100,8 @@ $colors: (
     50: $color-red-50,
   ),
   black: (
-    10: hsl(150, 14%, 15%),
+    10: hsl(0, 0%, 16%),
+    20: hsl(0, 0%, 7%)
   ),
 );
 
