--- a/sass/base/_root.scss
+++ b/sass/base/_root.scss
@@ -40,3 +40,9 @@
   --title-small: 1.2rem;
   --shadow-primary: 0px 8px 16px -4px rgba(#ed1b24, 0.25);
 }
+
+@media (prefers-color-scheme: dark) {
+  body.theme-dark {
+    background-color: black;
+  }
+}
