--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,23 +1,23 @@
 .button {
-    appearance: none;
-    background-color: transparent;
-    border: 1px solid rgb(221, 221, 221);
-    border-radius: 50px;
-    cursor: pointer;
-    font-size: .8rem;
-    padding: .8rem 1rem;
-    margin: 10px; line-height: 1rem;
-    text-transform: capitalize;
-   
-    &--active {
-        background-color: var(--color-black-10);
-        color: white;
-    }
-
-    &:hover {
-        transition: all .2s ease-in-out;
-        background-color: var(--color-black-10);
-        color: white;
-    }
-    
+  appearance: none;
+  background-color: transparent;
+  border: 1px solid rgb(221, 221, 221);
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 0.8rem;
+  padding: 0.8rem 1rem;
+  margin: 10px;
+  line-height: 1rem;
+  text-transform: capitalize;
+  outline: none;
+  &--active {
+    background-color: var(--color-black-10);
+    color: white;
   }
+
+  &:hover {
+    transition: all 0.2s ease-in-out;
+    background-color: var(--color-black-10);
+    color: white;
+  }
+}
