--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -3,87 +3,91 @@ resultados
 */
 
 #mapa {
-    background-color: var(--color-bluelight-100);
-    flex: 1 1 auto;
-    flex-direction: column;
-    position: relative;
-    
+  background-color: var(--color-bluelight-100);
+  flex: 1 1 auto;
+  flex-direction: column;
+  position: relative;
+  height: 980px;
 }
 
 #filters {
-    border-bottom: 1px solid var(--color-white-20);
-    padding-bottom: 1rem;
+  border-bottom: 1px solid var(--color-white-20);
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .results {
-    &__item {
-        position: relative;
+  &__item {
+    position: relative;
 
-        &--title {
-            font-size: 1.3rem;
-            font-weight: 800;
-        }
-
-       
-        &--type {
-            color: var(--color-white-50);
-            text-transform: capitalize;
-            font-size: .9rem;
-        }
-
-        i {
-            margin-right: 5px;
-            display: flex;
-            align-items: center;
-            color: var(--color-white-50)
-        }
+    &--title {
+      font-size: 1.3rem;
+      font-weight: 800;
     }
 
-    &__column {
-        overflow: hidden;
-        height: 100%;
-        max-height: 1080px;
-        padding: 0;
-        &--wrapper {
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            max-width: 980px;
-            scrollbar-width: none;
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-        }
-
-        &--item {
-            padding: 2rem 1.168rem;
-            border-bottom: 1px solid var(--color-white-20);
-        }
-
-        &--img {
-            border-radius: .5rem;
-            overflow: hidden;
-        }
+    &--type {
+      color: var(--color-white-50);
+      text-transform: capitalize;
+      font-size: 0.9rem;
     }
 
-    &__item--text {
-        font-size: 14px;
-        color: #717171;
-        line-height: 1.1618rem;
-        letter-spacing: 0.01618rem;
-        font-weight: 300;
+    i {
+      margin-right: 5px;
+      display: flex;
+      align-items: center;
+      color: var(--color-white-50);
     }
+  }
+
+  &__column {
+    overflow: auto;
+    height: 100%;
+    max-height: 980px;
+    padding: 0;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    &--wrapper {
+      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      max-width: 980px;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    &--item {
+      padding: 2rem 1.168rem;
+      border-bottom: 1px solid var(--color-white-20);
+    }
+
+    &--img {
+      border-radius: 0.5rem;
+      overflow: hidden;
+    }
+  }
+
+  &__item--text {
+    font-size: 14px;
+    color: #717171;
+    line-height: 1.1618rem;
+    letter-spacing: 0.01618rem;
+    font-weight: 300;
+  }
 }
 
 .favourite {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
