--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -105,6 +105,14 @@ $colors: (
   ),
 );
 
+
+// theme dark
+
+$bg-primary-dark: hsl(0, 0%, 13%);
+$bg-color: hsl(0, 0%, 16%);
+$dark-color: hsl(0, 0%, 90%);
+$font-color: hsl(0, 0%, 44%);
+
 // Border
 $border-radius: 0.25rem;
 $border-radius-big: 5rem;
