--- a/EntregaRepossi/css/main.css
+++ b/EntregaRepossi/css/main.css
@@ -1559,67 +1559,6 @@ main {
   color: white;
 }
 
-.switch {
-  display: inline-block;
-  height: 24px;
-  margin: 0 1.2rem;
-  position: relative;
-  width: 40px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  -webkit-transition: .4s;
-  background-color: white;
-  bottom: 4px;
-  content: "";
-  height: 16px;
-  left: 4px;
-  position: absolute;
-  transition: .4s;
-  width: 16px;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px #2196F3;
-          box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(16px);
-  transform: translateX(16px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
 @media only screen and (min-width: 0) {
   .in-xs-1 {
     -webkit-box-flex: 0;
@@ -1996,41 +1935,14 @@ input:checked + .slider:before {
 }
 
 header {
-  background-color: var(--dark-background-header);
-  -webkit-box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
   height: 5rem;
+  background-color: var(--dark-background-header);
+  width: 100%;
   overflow: hidden;
   position: fixed;
-  width: 100%;
   z-index: 9;
-}
-
-#getFavorites {
-  position: relative;
-}
-
-#getFavorites span {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #292929;
-  border-radius: 50px;
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 12px;
-  height: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  right: 0;
-  top: -10px;
-  width: 20px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  -webkit-box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -2060,6 +1972,10 @@ resultados
   padding-top: 1rem;
 }
 
+.results__item {
+  position: relative;
+}
+
 .results__item--title {
   font-size: 1.3rem;
   font-weight: 800;
@@ -2083,12 +1999,12 @@ resultados
 }
 
 .results__column {
-  -ms-overflow-style: none;
+  overflow: auto;
   height: 100%;
   max-height: 980px;
-  overflow: auto;
   padding: 0;
   scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .results__column::-webkit-scrollbar {
@@ -2096,7 +2012,7 @@ resultados
 }
 
 .results__column--wrapper {
-  -ms-overflow-style: none;
+  overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2105,14 +2021,13 @@ resultados
       -ms-flex-direction: column;
           flex-direction: column;
   max-width: 980px;
-  overflow: auto;
   scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .results__column--item {
+  padding: 2rem 1.168rem;
   border-bottom: 1px solid var(--color-white-20);
-  padding: 2rem;
-  position: relative;
 }
 
 .results__column--img {
@@ -2121,25 +2036,33 @@ resultados
 }
 
 .results__item--text {
-  color: var(--dark-color);
   font-size: 14px;
-  font-weight: 300;
-  letter-spacing: 0.01618rem;
+  color: var(--dark-color);
   line-height: 1.1618rem;
+  letter-spacing: 0.01618rem;
+  font-weight: 300;
 }
 
 .iconFav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #e6e6e6;
   border-radius: 50%;
-  border: none;
   color: #7d7d7d;
-  cursor: pointer;
-  height: 30px;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  width: 30px;
-  z-index: 1;
 }
 
 .iconFav.disabled {
@@ -2147,20 +2070,8 @@ resultados
 }
 
 .iconFav::after {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 50%;
   content: "\f1a2";
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-family: uicons-regular-straight !important;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
 }
 
 #footer {
