--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -1,13 +1,31 @@
 header {
+  background-color: var(--dark-background-header);
+  box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
   height: 5rem;
-  background-color: #fff;
-  width: 100%;
   overflow: hidden;
   position: fixed;
+  width: 100%;
   z-index: 9;
-  box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
 }
 
+#getFavorites {
+  position: relative;
+  span {
+    align-items: center;
+    background-color: $bg-color;
+    border-radius: 50px;
+    color: #fff;
+    display: flex;
+    font-size: 12px;
+    height: 20px;
+    justify-content: center;
+    position: absolute;
+    right: 0;
+    top: -10px;
+    width: 20px;
+    transition: all .2s ease-in-out;
+}
+}
 .logo {
   width: 2.5rem;
   height: 5rem;
