--- a/sass/pages/_resultados.scss
+++ b/sass/pages/_resultados.scss
@@ -3,91 +3,107 @@ resultados
 */
 
 #mapa {
-  background-color: var(--color-bluelight-100);
-  flex: 1 1 auto;
-  flex-direction: column;
-  position: relative;
-  height: 980px;
+    background-color: var(--color-bluelight-100);
+    flex: 1 1 auto;
+    flex-direction: column;
+    position: relative;
+    height: 980px;
 }
 
 #filters {
-  border-bottom: 1px solid var(--color-white-20);
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+    border-bottom: 1px solid var(--color-white-20);
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 }
 
 .results {
-  &__item {
-    position: relative;
+    &__item {
+        &--title {
+            font-size: 1.3rem;
+            font-weight: 800;
+        }
 
-    &--title {
-      font-size: 1.3rem;
-      font-weight: 800;
+        &--type {
+            color: var(--color-white-50);
+            text-transform: capitalize;
+            font-size: 0.9rem;
+        }
+
+        i {
+            margin-right: 5px;
+            display: flex;
+            align-items: center;
+            color: var(--color-white-50);
+        }
     }
 
-    &--type {
-      color: var(--color-white-50);
-      text-transform: capitalize;
-      font-size: 0.9rem;
+    &__column {
+        -ms-overflow-style: none;
+        height: 100%;
+        max-height: 980px;
+        overflow: auto;
+        padding: 0;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+        &--wrapper {
+            -ms-overflow-style: none;
+            display: flex;
+            flex-direction: column;
+            max-width: 980px;
+            overflow: auto;
+            scrollbar-width: none;
+        }
+
+        &--item {
+            border-bottom: 1px solid var(--color-white-20);
+            padding: 2rem;
+            position: relative;
+        }
+
+        &--img {
+            border-radius: 0.5rem;
+            overflow: hidden;
+        }
     }
 
-    i {
-      margin-right: 5px;
-      display: flex;
-      align-items: center;
-      color: var(--color-white-50);
+    &__item--text {
+        color: var(--dark-color);
+        font-size: 14px;
+        font-weight: 300;
+        letter-spacing: 0.01618rem;
+        line-height: 1.1618rem;
     }
-  }
-
-  &__column {
-    overflow: auto;
-    height: 100%;
-    max-height: 980px;
-    padding: 0;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
-    &--wrapper {
-      overflow: auto;
-      display: flex;
-      flex-direction: column;
-      max-width: 980px;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-    }
-
-    &--item {
-      padding: 2rem 1.168rem;
-      border-bottom: 1px solid var(--color-white-20);
-    }
-
-    &--img {
-      border-radius: 0.5rem;
-      overflow: hidden;
-    }
-  }
-
-  &__item--text {
-    font-size: 14px;
-    color: #717171;
-    line-height: 1.1618rem;
-    letter-spacing: 0.01618rem;
-    font-weight: 300;
-  }
 }
 
-.favourite {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.iconFav {
+    background-color: hsl(0, 0%, 90%);
+    border-radius: 50%;
+    border: none;
+    color: hsl(0, 0%, 49%);
+    cursor: pointer;
+    height: 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    z-index: 1;
+
+    &.disabled {
+        cursor: not-allowed;
+    }
+
+    &::after {
+        align-items: center;
+        border-radius: 50%;
+        content: "\f1a2";
+        display: flex;
+        font-family: uicons-regular-straight !important;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
+    }
 }
