--- a/css/main.css
+++ b/css/main.css
@@ -2029,8 +2029,6 @@ header {
   right: 0;
   top: -10px;
   width: 20px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
 }
 
 .logo {
@@ -2144,6 +2142,7 @@ resultados
 
 .iconFav.disabled {
   cursor: not-allowed;
+  background-color: black;
 }
 
 .iconFav::after {
