--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -23,7 +23,7 @@ header {
     right: 0;
     top: -10px;
     width: 20px;
-    transition: all .2s ease-in-out;
+    //transition: all .2s ease-in-out;
 }
 }
 .logo {
