--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -107,8 +107,8 @@ $colors: (
 
 
 // theme dark
-
-$bg-primary-dark: hsl(0, 0%, 13%);
+$absolute-dark-color: hsl(0, 0%, 7%);
+$sidebar-bg-color-dark: hsl(0, 0%, 9%);
 $bg-color: hsl(0, 0%, 16%);
 $dark-color: hsl(0, 0%, 90%);
 $font-color: hsl(0, 0%, 44%);
