--- a/sass/base/_root.scss
+++ b/sass/base/_root.scss
@@ -1,114 +1,107 @@
 :root {
-  @each $color, $shades in $colors {
-    @each $shade, $value in $shades {
-      --color-#{$color}-#{$shade}: #{$value};
-    }
-  }
-
-  --color-red-20-outline: #ed1b24;
-  --color-base: var(--color-white-10);
-  --color-footer: var(--color-black-10);
-  --color-footer-paragraph: #bac4e1;
-  --color-border: var(--color-white-20);
-
-  @each $font, $value in $fontfamily {
-    --font-family-#{$font}: #{$value};
-  }
-
-  @each $screen-size, $font-size in $fontSizes {
-    @if $screen-size == lg {
-      @each $size, $value in $font-size {
-        --fs-#{$size}: #{$value};
-      }
-    } @else {
-      @include mq(lg) {
-        @each $size, $value in $font-size {
-          --fs-#{$size}: #{$value};
+    @each $color, $shades in $colors {
+        @each $shade, $value in $shades {
+            --color-#{$color}-#{$shade}: #{$value};
         }
-      }
     }
-  }
 
-  --border-radius: #{$border-radius};
-  --border-radius-circle: #{$border-radius-big};
-  --global-color-text: #333;
-  --h1-font: "Lato", sans-serif;
-  --h3-font: "Open Sans", sans-serif;
-  --padding-big: 5rem 1.6rem;
-  --padding-small: 2rem 0;
-  --title-big: 2rem;
-  --title-small: 1.2rem;
-  --shadow-primary: 0px 8px 16px -4px rgba(#ed1b24, 0.25);
+    --color-red-20-outline: #ed1b24;
+    --color-base: var(--color-white-10);
+    --color-footer: var(--color-black-10);
+    --color-footer-paragraph: #bac4e1;
+    --color-border: var(--color-white-20);
 
+    @each $font, $value in $fontfamily {
+        --font-family-#{$font}: #{$value};
+    }
 
---dark-background-color: #fff;
---dark-color: #{$font-color};
+    @each $screen-size, $font-size in $fontSizes {
+        @if $screen-size == lg {
+            @each $size, $value in $font-size {
+                --fs-#{$size}: #{$value};
+            }
+        }
+        @else {
+            @include mq(lg) {
+                @each $size, $value in $font-size {
+                    --fs-#{$size}: #{$value};
+                }
+            }
+        }
+    }
 
-}
-
- 
-body.theme-light{
-  --dark-background-header: #fff;
-  --dark-color: var(--color-white-50);
-}
-
-body.theme-dark {
-  background-color: var(--dark-background-color);
-  header{
-    background-color: var( --dark-background-header);
-    color: white
-  }
-  #filters{
-    color: white;
-  }
-  .button{
-    color: white;
-    border: 1px solid #191919 ;
-  }
-  .button--active{
-    background-color: #303030 ;
-    color: #aaa;
-  }
-  .results__column--item{
-    border-bottom: 1px solid  #191919 ;
-  }
-  #footer{
-    background-color: var(--dark-background-header);
-    color: white
-  }
-}
-
-
-@media (prefers-color-scheme: dark) {
-
-  :root {
-    --dark-background-header: #{$bg-primary-dark};
-    --dark-background-color: #{$bg-color};
+    --absolute-color-dark: #{$absolute-dark-color};
+    --absolute-color-light: white;
+    --absolute-color-item: var(--absolute-color-light);
+    --absolute-color: var(--absolute-color-light);
+    --bg-color: var(--sidebar-bg-color-light);
+    --body-color-2-dark: #171717;
+    --body-color-2-light: #f5f5f5;
+    --body-color-3-dark: #222;
+    --body-color-3-light: #f9f9f9;
+    --body-color-4-light: #eee;
+    --body-color-5-light: #ddd;
+    --body-color-dark: #151515;
+    --body-color-light: #fff;
+    --border-radius-circle: #{$border-radius-big};
+    --border-radius: #{$border-radius};
+    --dark-background-color: #fff;
     --dark-color: #{$font-color};
-  }
-  body.theme-dark {
-    background-color: var(--dark-background-color);
-    header{
-      background-color: var(--dark-background-header);
-      color: white
-    }
-    #filters{
-      color: white;
-    }
-    .button{
-      color: white;
-      border: 1px solid #191919 ;
-    }
-    .button--active{
-      background-color: #303030 ;
-      color: #aaa;
-    }
-    .results__column--item{
-      border-bottom: 1px solid  #191919 ;
-    }
-    #footer{
-      background-color: var(--dark-background-header);
-      color: white
-    }
-  }
+    --global-color-text: #333;
+    --h1-font: "Lato", sans-serif;
+    --h3-font: "Open Sans", sans-serif;
+    --header-bg-color:var(--header-color-translucent-light);
+    --header-color-translucent-dark: #151515;
+    --header-color-translucent-light: #fffa;
+    --sidebar-bg-color-dark: #{$sidebar-bg-color-dark};
+    --sidebar-bg-color-light: #f9f9f9;
+    --padding-big: 5rem 1.6rem;
+    --padding-small: 2rem 0;
+    --shadow-primary: 0px 8px 16px -4px rgba(#ed1b24, 0.25);
+    --text-color: var(--text-color-light);
+    --title-big: 2rem;
+    --title-small: 1.2rem;
+    --text-color-dark: white;
+    --text-color-light: black;
 }
+:root {
+    --absolute-color-dark: #{$absolute-dark-color};
+    --absolute-color-light: white;
+    --body-color-2-dark: #171717;
+    --body-color-2-light: #f5f5f5;
+    --body-color-3-dark: #222;
+    --body-color-3-light: #f9f9f9;
+    --body-color-4-light: #eee;
+    --body-color-5-light: #ddd;
+    --body-color-dark: #151515;
+    --body-color-light: #fff;
+    --header-color-translucent-dark: #151515;
+    --header-color-translucent-light: #fffa;
+    --text-color-dark: white;
+    --text-color-light: black;
+    --sidebar-bg-color-dark: #{$sidebar-bg-color-dark};
+    --sidebar-bg-color-light: #f9f9f9;
+}
+
+.theme-dark {
+    --absolute-color: var(--absolute-color-dark);
+    --absolute-color-item: var(--sidebar-bg-color-dark);
+    --bg-color: var(--sidebar-bg-color-dark);
+    --header-bg-color:var(--header-color-translucent-dark);
+    --text-color: var(--text-color-dark);
+   
+
+}
+
+
+.theme-light {
+    --absolute-color: var(--absolute-color-light);
+    --absolute-color-item: var(--absolute-color-light);
+    --bg-color: var(--sidebar-bg-color-light);
+    --header-bg-color:var(--header-color-translucent-light);
+    --text-color: var(--text-color-light);
+  
+
+}
+
+
