--- a/sass/layouts/header/_index.scss
+++ b/sass/layouts/header/_index.scss
@@ -1,32 +1,57 @@
+
+
 header {
-  background-color: var(--dark-background-header);
-  box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
-  height: 5rem;
-  overflow: hidden;
-  position: fixed;
-  width: 100%;
-  z-index: 9;
+  
+   background-color: var(--absolute-color);
+    box-shadow: 0px 0.3px 2px rgba(0, 0, 0, 0.2);
+    height: 5rem;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    z-index: 9;
+    color: var(--text-color);
 }
 
 #getFavorites {
-  position: relative;
-  span {
-    align-items: center;
-    background-color: $bg-color;
-    border-radius: 50px;
-    color: #fff;
-    display: flex;
-    font-size: 12px;
-    height: 20px;
-    justify-content: center;
-    position: absolute;
-    right: 0;
-    top: -10px;
-    width: 20px;
-    //transition: all .2s ease-in-out;
+    position: relative;
+    cursor: pointer;
+
+    span {
+        align-items: center;
+        background-color: $bg-color;
+        border-radius: 50px;
+        color: #fff;
+        display: flex;
+        font-size: 12px;
+        height: 20px;
+        justify-content: center;
+        position: absolute;
+        right: 0;
+        top: -10px;
+        width: 20px;
+
+        //transition: all .2s ease-in-out;
+   
+    }
+
+   
 }
+
+.favorites__wrapper {
+  background-color: var(--bg-color);
+  border-left: 1px solid var(--header-bg-color);
+  bottom: 0;
+  color: var(--text-color);
+  padding: 2rem;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 400px;
+  z-index: 9;
+  transform: translateX(100%);
+
 }
 .logo {
-  width: 2.5rem;
-  height: 5rem;
+    width: 2.5rem;
+    height: 5rem;
 }
